# sniffer

./: .gitignore  package-lock.json  package.json  vite.config.js
.github/workflows/: main.yml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/snif/: Cargo.toml
src-tauri/snif/src/: lib.rs
src-tauri/src/: main.rs
src/components/: Bargraph.jsx  Ollamadisplay.jsx  Pagination.jsx  Piechart.jsx  lineargraph.jsx
