[package]
name = "sniffer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = ["snif"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snif = {path = "./snif"}
rusqlite = "0.31.0"
pnet = "0.35.0"
# rusqlite = "0.31.0"
chrono = "0.4.19"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
base64 = "0.21.0"
hex = "0.4.2"
reqwest = { version = "0.11", features= ["json"] }
tokio = {version = "1", features= ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
