[package]
name = "snif"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.35.0"
rusqlite = "0.31.0"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
reqwest = { version = "0.11" , features= ["json"] }
hex = "0.4.2"
tokio = {version = "1", features=["full"]}
